Manage allowed hosts in NRPE client

--- a/templates/nrpe.cfg.erb
+++ b/templates/nrpe.cfg.erb
@@ -84,7 +84,7 @@ nrpe_group=nrpe
 #
 # NOTE: This option is ignored if NRPE is running under either inetd or xinetd
 
-allowed_hosts=137.222.7.147,127.0.0.1,137.222.8.103
+allowed_hosts=<%= @nagios_server_list %>
  
 
 
