Configure NRPE ACLs with IPs instead of hostnames

--- a/templates/nrpe.cfg.erb
+++ b/templates/nrpe.cfg.erb
@@ -84,7 +84,7 @@ nrpe_group=nrpe
 #
 # NOTE: This option is ignored if NRPE is running under either inetd or xinetd
 
-allowed_hosts=<%= @nagios_server_list %>
+allowed_hosts=<%= @nagios_server_ip_list %>
  
 
 
