--- a/templates/nagios.cfg.4.erb
+++ b/templates/nagios.cfg.4.erb
@@ -257,7 +257,7 @@ log_archive_path=/var/log/nagios/archives
 # If you want messages logged to the syslog facility, as well as the
 # Nagios log file set this option to 1.  If not, set it to 0.
 
-use_syslog=1
+use_syslog=<%= @use_syslog %>
 
 
 
